--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,9 @@
+title: Hacker theme
+description: Hacker is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-hacker
-
 github:
   repository_url: https://github.com/econdesousa/
+
+
