--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
-show_downloads: true
+title: Eduardo Conde-Sousa
+description: 
+show_downloads: false
 google_analytics: UA-131162060-2
 theme: jekyll-theme-hacker
 github:
