--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,9 @@ google_analytics: UA-131162060-2
 theme: jekyll-theme-hacker
 github:
   repository_url: https://github.com/econdesousa/
+  
+  
+pages_list:       
+  Research Interests: '/ResearchInterests'
 
 
