--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,9 @@ github:
   repository_url: https://github.com/econdesousa/
   
 
+sidebar:
+  title: "Different Versions of me"
+  image: "https://econdesousa.github.io/assets/008_passe.gif"
+  image_alt: "Different Versions of me"
+  text: for more info on this image please click <a href="https://github.com/econdesousa/ImageAnalysis/tree/master/gifWithOverlay">here</a>!
+  
