--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 title: Eduardo Conde-Sousa
 description: 
-show_downloads: false
-google_analytics: UA-131162060-2
+show_downloads: true
+google_analytics: 
 theme: jekyll-theme-hacker
+plugins:
+  - jekyll-redirect-from
 github:
   repository_url: https://github.com/econdesousa/
   
