--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Eduardo Conde-Sousa
 description: 
 show_downloads: true
 google_analytics: 
-theme: jekyll-theme-hacker
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-redirect-from
 github:
