--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Eduardo Conde-Sousa
 description: 
-show_downloads: true
+show_downloads: false
 google_analytics: 
 theme: jekyll-theme-minimal
 plugins:
