--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Eduardo Conde-Sousa
 description: 
-show_downloads: false
+show_downloads: true
 google_analytics: 
 theme: jekyll-theme-hacker
 plugins:
