--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Eduardo Conde-Sousa
 description: 
 show_downloads: false
-google_analytics: 
+google_analytics: G-3JWYKYVYDZ
 theme: jekyll-theme-hacker
 listen_for_clients_preferred_style: true # false (default) or true
 footer: 'follow me on <a href="https://twitter.com/econdesousa">twitter</a>'
