--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Eduardo Conde-Sousa
+title: Eduardo Conde-Sousa | Data Scientist @ P95 Pharmacovigilance and Epidemiology, Leuven, Belgium
+
 description: 
 show_downloads: false
 google_analytics: G-3JWYKYVYDZ
