--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Eduardo Conde-Sousa | Data Scientist @ P95 Pharmacovigilance and Epidemiology, Leuven, Belgium 
+title: Eduardo Conde-Sousa | Data Scientist @ P95
 
 description: 
 show_downloads: false
