--- a/.github/workflows/update-publications.yml
+++ b/.github/workflows/update-publications.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install scholarly
+          pip install scholarly markdown-it-py
 
       # Runs a script to fetch and format the publications
       - name: Fetch and format publications
