--- a/.github/workflows/update-publications.yml
+++ b/.github/workflows/update-publications.yml
@@ -30,11 +30,12 @@ jobs:
         run: |
           python .github/workflows/update_publications.py
 
+      
       # Commits the changes back to the repository
       - name: Commit files
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add publications.md
+          git add Publications.md
           git commit -m "Update publications list via GitHub Action" || echo "No changes to commit"
           git push
